--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Get testnet tokens to use on the Analog Fuji Network (testnet) or a Subnet (WAGMI, Defi Kingdoms, Dexalot, Swimmer, and Castle Crush) in one place.">
-    <meta name="keywords" content="Analog, AVAX, Faucet, Fuji, Testnet">
+    <meta name="description" content="Get testnet tokens to use on the Analog  Network (testnet) or a Testnet (WANA, ANA) in one place.">
+    <meta name="keywords" content="Analog, Faucet,  Testnet">
     
     <meta property="og:title" content="Analog Faucet">
     <meta property="og:site_name" content="Faucet | Analog">
-    <meta property="og:url" content="https://faucet.avax.network/">
-    <meta property="og:description" content="Get testnet tokens to use on the Analog Fuji Network (testnet) or a Subnet (WAGMI, Defi Kingdoms, Dexalot, Swimmer, and Castle Crush) in one place.">
+    <meta property="og:url" content="https://analogfaucet.com/">
+    <meta property="og:description" content="Get testnet tokens to use on the Analog Network (testnet) or a Testnet (WANA, ANA) in one place.">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
