--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,23 +2,23 @@
 <html lang="en" style="width: 100%; height: 100%;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/analog_icon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/SVG/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
     <meta name="description" content="Get testnet tokens to use on the Analog  Network (testnet) or a Testnet (WANA, ANA) in one place.">
-    <meta name="keywords" content="Analog, Faucet,  Testnet">
+    <meta name="keywords" content="SeedX, Faucet,  Testnet">
     
-    <meta property="og:title" content="Analog Faucet">
+    <meta property="og:title" content="SeedX Faucet">
     <meta property="og:site_name" content="Faucet | Analog">
     <meta property="og:url" content="https://analogfaucet.com/">
     <meta property="og:description" content="Get testnet tokens to use on the Analog Network (testnet) or a Testnet (WANA, ANA) in one place.">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet | ANALOG</title>
+    <title>Faucet | SeedX</title>
   </head>
-  <body style="background: no-repeat center center fixed; background-image: linear-gradient(315deg, #14103f 0%, #14103f 100%);">
+  <body style="background: no-repeat center center fixed; background: #111213;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
