--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Get testnet tokens to use on the Analog  Network (testnet) or a Testnet (WANA, ANA) in one place.">
-    <meta name="keywords" content="SeedX, Faucet,  Testnet">
+    <meta name="description" content="Acquire Seedx Testing Tokens so that you may use the Seedx decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
+    <meta name="keywords" content="SeedX, Faucet, Testnet">
     
     <meta property="og:title" content="SeedX Faucet">
-    <meta property="og:site_name" content="Faucet | Analog">
-    <meta property="og:url" content="https://analogfaucet.com/">
-    <meta property="og:description" content="Get testnet tokens to use on the Analog Network (testnet) or a Testnet (WANA, ANA) in one place.">
+    <meta property="og:site_name" content="Faucet | Seedx">
+    <meta property="og:url" content="https://faucet.seedx.app/">
+    <meta property="og:description" content="Acquire Seedx Testing Tokens so that you may use the Seedx decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
