--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,23 +2,23 @@
 <html lang="en" style="width: 100%; height: 100%;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/SVG/icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Acquire Seedx Testing Tokens so that you may use the Seedx decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
-    <meta name="keywords" content="SeedX, Faucet, Testnet">
+    <meta name="description" content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
+    <meta name="keywords" content="Tarality, Faucet, Testnet">
     
-    <meta property="og:title" content="SeedX Faucet">
-    <meta property="og:site_name" content="Faucet | Seedx">
-    <meta property="og:url" content="https://faucet.seedx.app/">
-    <meta property="og:description" content="Acquire Seedx Testing Tokens so that you may use the Seedx decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
+    <meta property="og:title" content="Tarality Faucet">
+    <meta property="og:site_name" content="Faucet | Tarality">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet | SeedX</title>
+    <title>Faucet-Tarality</title>
   </head>
-  <body style="background: no-repeat center center fixed; background: #111213;">
+  <body style="background: no-repeat center center fixed; background: linear-gradient(315deg, #14103f 0%, #14103f 100%);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
