--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Faucet-Tarality</title>
   </head>
-  <body style="background: no-repeat center center fixed; background: linear-gradient(315deg, #14103f 0%, #14103f 100%);">
+  <body style="background:#fff url('bg.jpg');
+  background-repeat :no-repeat;
+  background-position: bottom;
+  background-size: cover;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
