--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
-    <meta name="keywords" content="Tarality, Faucet, Testnet">
+    <meta name="description" content="Acquire Asian Testing Tokens so that you may use the Asian decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
+    <meta name="keywords" content="Asian, Faucet, Testnet">
     
-    <meta property="og:title" content="Tarality Faucet">
-    <meta property="og:site_name" content="Faucet | Tarality">
+    <meta property="og:title" content="Asian Faucet">
+    <meta property="og:site_name" content="Faucet | Asian">
     <meta property="og:url" content="">
-    <meta property="og:description" content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
+    <meta property="og:description" content="Acquire Asian Testing Tokens so that you may use the Asian decentralised exchange that is hosted on the Binance Smart Chain (Testnet).">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet-Tarality</title>
+    <title>Faucet-Asian</title>
   </head>
   <body style="background:#fff url('bg.jpg');
   background-repeat :no-repeat;
