--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet-Asian</title>
+    <title>Faucet-Global</title>
   </head>
   <body style="background:#fff url('bg.jpg');
   background-repeat :no-repeat;
