--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Faucet-Asian</title>
   </head>
-  <body style="background:#fff url('bg.jpg');
+  <body style="
+  background:#fcfcfc url('bg2.png');
+  /* background: #fcfcfc; */
   background-repeat :no-repeat;
   background-position: bottom;
   background-size: cover;">
