--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,25 +7,25 @@
 
     <meta
       name="description"
-      content="Acquire Asian Testing Tokens so that you may use the Asian decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
+      content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
     />
-    <meta name="keywords" content="Asian, Faucet, Testnet" />
+    <meta name="keywords" content="Tarality, Faucet, Testnet" />
 
-    <meta property="og:title" content="Asian Faucet" />
-    <meta property="og:site_name" content="Faucet | Asian" />
+    <meta property="og:title" content="Tarality Faucet" />
+    <meta property="og:site_name" content="Faucet | Tarality" />
     <meta property="og:url" content="" />
     <meta
       property="og:description"
-      content="Acquire Asian Testing Tokens so that you may use the Asian decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
+      content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
     />
     <meta property="og:type" content="website" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet-Global</title>
+    <title>Faucet-Tarality</title>
   </head>
   <body
     style="
-      background:  url('background_global.jpg');
+      background:  url('bg_taral.png');
       background-repeat: no-repeat;
       /* background-position: bottom; */
       background-size: 100% 100%;
