--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,25 +7,26 @@
 
     <meta
       name="description"
-      content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
+      content="Acquire Elucks Testing Tokens so that you may use the Elucks decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
     />
-    <meta name="keywords" content="Tarality, Faucet, Testnet" />
+    <meta name="keywords" content="Elucks, Faucet, Testnet" />
 
-    <meta property="og:title" content="Tarality Faucet" />
-    <meta property="og:site_name" content="Faucet | Tarality" />
+    <meta property="og:title" content="Elucks Faucet" />
+    <meta property="og:site_name" content="Faucet | Elucks" />
     <meta property="og:url" content="" />
     <meta
       property="og:description"
-      content="Acquire Tarality Testing Tokens so that you may use the Tarality decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
+      content="Acquire Elucks Testing Tokens so that you may use the Elucks decentralised exchange that is hosted on the Binance Smart Chain (Testnet)."
     />
     <meta property="og:type" content="website" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet-Tarality</title>
+    <title>Faucet-Elucks</title>
   </head>
   <body
     style="
-      background:  url('bg_taral.png');
+      background:  url('./banner.jpg');
+      /* background-color: rgb(110, 110, 110); */
       background-repeat: no-repeat;
       /* background-position: bottom; */
       background-size: 100% 100%;
